--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "typeface-fira-code": "^1.1.13",
+    "typeface-fira-sans": "^1.1.13",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
