--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-typescript": "^7.13.0",
     "@craco/craco": "^6.1.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -12,6 +13,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@xstate/inspect": "^0.4.1",
+    "@xstate/react": "^1.3.2",
     "array-shuffle": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,7 +24,10 @@
     "typeface-fira-code": "^1.1.13",
     "typeface-fira-sans": "^1.1.13",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "userbase-js": "^2.8.0",
+    "web-vitals": "^1.0.1",
+    "xstate": "^4.18.0",
+    "xstate-codegen": "^0.3.0"
   },
   "scripts": {
     "start": "craco start",
