❌ Abandoned Unix-style login is here
Giving up on this as the reality is that I need people to be using password managers and a) this is password-manager-unfriendly, and b) they’ll never use the coolness if they are actually using a PM so what’s the point?

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,4 @@
 {
   "workbench.editor.labelFormat": "medium",
-  "workbench.colorCustomizations": {
-    "activityBar.background": "#300A89",
-    "titleBar.activeBackground": "#430FC0",
-    "titleBar.activeForeground": "#FCFAFF"
-  }
+  "cSpell.enabled": false
 }
