--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "xstate-codegen \"src/**/**.machine.ts\"",
+    "postinstall": "yarn dev --once"
   },
   "eslintConfig": {
     "extends": [
