--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@xstate/immer": "^0.2.0",
     "@xstate/inspect": "^0.4.1",
     "@xstate/react": "^1.3.2",
     "array-shuffle": "^2.0.0",
+    "immer": "^9.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.0.0",
@@ -34,9 +36,9 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "dev": "xstate-codegen \"src/**/**.machine.ts\" --once",
     "xsc": "xstate-codegen \"src/**/**.machine.ts\"",
-    "postinstall": "yarn dev --once"
+    "_disabled.dev": "xstate-codegen \"src/**/**.machine.ts\" --once",
+    "_disabled.postinstall": "yarn dev --once"
   },
   "eslintConfig": {
     "extends": [
