--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "typescript": "^4.1.2",
     "userbase-js": "^2.8.0",
     "web-vitals": "^1.0.1",
-    "xstate": "^4.23.0",
-    "xstate-codegen": "^0.3.0"
+    "xstate": "^4.23.0"
   },
   "scripts": {
     "start": "craco start",
