--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "react-scripts": "4.0.3",
     "typeface-fira-code": "^1.1.13",
     "typeface-fira-sans": "^1.1.13",
-    "typescript": "4.3.4",
     "userbase-js": "^2.8.0",
     "web-vitals": "^1.0.1",
     "xstate": "^4.23.0"
@@ -61,6 +60,7 @@
     "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
     "autoprefixer": "^9",
     "postcss": "^7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "typescript": "4.3.4"
   }
 }
