--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "react-scripts": "4.0.3",
     "typeface-fira-code": "^1.1.13",
     "typeface-fira-sans": "^1.1.13",
-    "typescript": "^4.3.4",
+    "typescript": "4.3.4",
     "userbase-js": "^2.8.0",
     "web-vitals": "^1.0.1",
-    "xstate": "^4.23.0"
+    "xstate": "4.23.0"
   },
   "scripts": {
     "start": "craco start",
