--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@xstate/inspect": "^0.4.1",
     "@xstate/react": "^1.3.2",
     "array-shuffle": "^2.0.0",
+    "deepmerge": "^4.2.2",
     "immer": "^9.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
