--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "array-shuffle": "^2.0.0",
     "deepmerge": "^4.2.2",
     "immer": "^9.0.5",
+    "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.0.0",
