--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,12 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "npm run start",
-      "name": "Run npm start",
+      "type": "firefox",
+      // "type": "pwa-msedge",
       "request": "launch",
-      "type": "node-terminal"
+      "name": "Launch Firefox",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}"
     }
-  ],
-  "compounds": []
+  ]
 }
